[metadata]
name = jpcgen
version = attr: setuptools_scm.get_version
description = JP Carrier Metadata Generator for libphonenumber
author = Takuya Sawada
author_email = takuya@tuntunkun.com
license = MIT
classifiers =
	Environment :: Console
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Communications :: Telephony
	Topic :: Database
	Topic :: Utilities

[options]
packages = find:
setup_requires =
	setuptools_scm
install_requires =
	requests
	click
	xlrd

[options.entry_points]
console_scripts =
	jpcgen = jpcgen:main
